--- a/style.css
+++ b/style.css
@@ -3,11 +3,98 @@ body{
   font-size: 18px;
 }
 
-.top-img{
-
+.flex-container{
+    display: flex;
 }
 
+/* ここから　ホバー関係 */
+.hover-up {
+	position: relative;
+	/* margin: 0 auto; */
+	display: block;
+	/* border-radius: 12px; */
+	overflow: hidden;
+	cursor: pointer;
+}
+.hover-up div {
+	position: absolute;
+	top: 0;
+	left: 0;
+	/* width: 100%; */
+    height: 100%;
+    display: block;
+	-webkit-transition: .4s ease-in-out;
+	transition: .4s ease-in-out;
+}
+.hover-up div:nth-of-type(1) {
+  top: 100%;
+}
+.hover-up div:nth-of-type(2) {
+  top: 0;
+}
+.hover-up:hover div:nth-of-type(1) {
+  top: 0;
+}
+.hover-up:hover div:nth-of-type(2) {
+  top: -100%;
+}
+/* ここまで　ホバー関係 */
+
+
+
+
+.top-img{
+    height: 50vh;
+}
 
 .profile{
-    background-color: aqua;
+    height: 40vh;
+    min-height: 250px;
+    margin: 20px;
 }
+.profile-img{
+    height: 100%;
+}
+
+.dev, .photo, .reserch{
+    height: 80vh;
+    width: 33%;
+}
+.dev{
+    background-image: url(./img/dev-background.png);
+    background-position:center bottom;                     /* 画像の表示位置を指定 */
+    background-size:cover;                                 /* 画像のサイズを指定  */
+    /*width:100%;                                            /* 横幅のサイズを指定  */
+    /*height:400px;                                          /*縦幅のサイズを指定 */
+}
+.photo{
+    background-image: url(./img/sunset.jpg);
+    background-position:center bottom;                     /* 画像の表示位置を指定 */
+    background-size:cover;
+}
+
+.reserch{
+    /* background-image: url(./img/sunset.jpg); */
+    background-position:center bottom;                     /* 画像の表示位置を指定 */
+    background-size:cover;
+}
+
+.mask-reserch{
+    background-color: yellow;
+    height: 100%;
+    width: 100%;
+}
+.mask-dev{
+    background-color: green;
+    height: 100%;
+    width: 100%;
+}
+.mask-photo{
+    background-color: pink;
+    height: 100%;
+    width: 100%;
+}
+
+
+
+
