--- a/css/style_sp.css
+++ b/css/style_sp.css
@@ -3,6 +3,7 @@ html {
   font-size: 16px;
   height: 100%;
 }
+
 body {
   background-color: #ebecf0;
   font-size: 16px;
@@ -11,7 +12,7 @@ body {
 }
 
 h1 {
-  font-size: 1.3em;
+  font-size: 2em;
   color: grey;
 }
 span {
@@ -85,7 +86,6 @@ span {
 }
 #viewmore {
   grid-area: viewmore;
-  /* background-color:#babecc; */
 }
 
 button {
@@ -119,6 +119,7 @@ button:active {
 
 .icon-item {
   list-style: none;
+  margin: 1em;
 }
 .icon-link {
   display: flex;
